flexboxproject.css
.body {
    display: flex;
    flex-direction: column;
}

.top-quarter {
    display: flex;
    flex-direction: column;
    background-color: #1f2937;
    color: white;
    
}

.header {
    display: flex;
    justify-content: space-around;
    padding: 16px;
    margin: 30px;

}

.logo { 
    display: flex;
    justify-content: flex-start;
    margin-left: 50px;
    font-size: 24px;
    font-family: #f9faf8;
}

.center {
    display: flex;
    justify-content: center;
}

.right-links {
    display: flex;
    justify-content: flex-end;
    color: white;
    gap: 16px;
    font-family: #e5e7eb;
    margin-right: 50px;
    font-size: 18px;
}

.topbody {
    display: flex;
    margin: 30px;
    justify-content: space-around;
}

.container{
    display: flex;
    flex-direction: column;
    max-width: 350px;
    margin: 50px;
    
}

.awesome{
    font-size: 48px;
    font-weight: 700;
    font-family: #f9faf8;
    

}

.subtext1 {
    font-size: 18px;
}

.signup {
    display: flex;
    background-color: #3882f6;
    max-width: 75px;
    min-height: 35px;
    justify-content: center;
    align-items: center;
    border-radius: 12px;
    color: white;
    margin-bottom: 16px;
    margin-top: 12px;

}

img {
    flex: 0;
    width: 450px;
    height: 281px;
}


a {
    text-decoration: none;
    color: white;
}

ul {
    list-style: none;
    color: white;
}

.middletop-quarter {
    display:flex;
    flex-direction: column;
}

.random {
    display: flex;
    justify-content: center;
    margin: 36px;
    font-size: 36px;
    font-weight: 700px;
    font-family: #1f2937;
}

.boxes {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    max-width: 100px;
    justify-content: center;
}

.box1, .box2,
.box3, .box4 {
    border: 1px solid;
    border-color: #3882f6;
    border-radius: 12px;
    height: 100px;
    width: 100px;
}

